--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,8 @@
-.app-container {
+/*.app-container {
     height: 200px;
-    width: 200px;
+    width: 400px;
+}*/
+
+.app-section {
+    padding: 1.5em;
 }
